--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,6 @@
   padding-bottom: 10px;
 }
 
-.chart-area-all {
-  /* border: 1px solid blueviolet; */
-}
-
 .allGenderGraphs {
   position: relative;
 }
@@ -74,6 +70,7 @@
   position: sticky;
   top: 0;
   background-color: #b2df8a;
+  z-index: 1;
 }
 
 #dateLabel1,
