--- a/css/style.css
+++ b/css/style.css
@@ -4,29 +4,13 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.card {
-  /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-#chart-area svg {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
-
 #logo {
   height: 50px;
+  padding: 10px;
 }
 
 #logoText {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .navbar-brand {
@@ -42,116 +26,19 @@ body {
   margin-right: 100px;
 }
 
-.axis {
-  font: 10px sans-serif;
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #d4d8da;
-  stroke-width: 2px;
-  shape-rendering: crispEdges;
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
 
-.line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
-}
-
-.overlay {
-  fill: none;
-  pointer-events: all;
-}
-
-.focus circle {
-  fill: #f1f3f3;
-  stroke: #777;
-  stroke-width: 3px;
-}
-
-.hover-line {
-  stroke: #777;
-  stroke-width: 2px;
-  stroke-dasharray: 3, 3;
-}
-
-#selections .col-md-4 {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.allGenderGraphs {
-  position: relative;
-}
-
-#pkMap {
-  position: absolute;
-  right: 300px;
-  top: 200px;
-  /* outs: do I need this z-index value; had to comment out in order to make hover work */
-  /* z-index: -1; */
-}
-
-/* outs: why is the title not showing up on top of graph */
-.graphTitle {
-  z-index: 1;
-}
-
-.land:hover {
-  fill: blueviolet;
-}
-
-#selections {
-  position: sticky;
-  top: 0;
-  background-color: rgb(142, 187, 217);
-  border: black;
-  border-width: 10px;
-  z-index: 1;
-}
-
-#dateLabel1,
-#dateLabel2 {
-  color: white;
-}
-
-#myBtn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: rgb(142, 187, 217); /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-}
-
-#myBtn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
-}
-
-/* Map styling: */
-.district:hover {
-  fill: gold;
-}
-
-/* outs - how to wrap text? */
-div.tooltip {
-  position: absolute;
-  text-align: center;
-  width: 80px;
-  height: 28px;
-  padding: 2px;
-  font: 12px sans-serif;
-  background: lightsteelblue;
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none;
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
